examples/test/testpolicy18798.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18798
  namespace: namespace136
spec:
  podSelector:
    matchLabels:
      key1: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value44
          key44: value7
          key41: value49
      podSelector:
        matchLabels:
          key9: value9
